# serializer version: 1
# name: test_forecast_service
  dict({
    'forecast': list([
      dict({
        'apparent_temperature': 29.8,
        'cloud_coverage': 58,
        'condition': 'lightning-rainy',
        'datetime': '2020-07-26T05:00:00+00:00',
        'precipitation': 2.5,
        'precipitation_probability': 60,
        'temperature': 29.5,
        'templow': 15.4,
        'uv_index': 5,
        'wind_bearing': 166,
        'wind_gust_speed': 29.6,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 28.9,
        'cloud_coverage': 52,
        'condition': 'partlycloudy',
        'datetime': '2020-07-27T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 25,
        'temperature': 26.2,
        'templow': 15.9,
        'uv_index': 7,
        'wind_bearing': 297,
        'wind_gust_speed': 14.8,
        'wind_speed': 9.3,
      }),
      dict({
        'apparent_temperature': 31.6,
        'cloud_coverage': 65,
        'condition': 'partlycloudy',
        'datetime': '2020-07-28T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 10,
        'temperature': 31.7,
        'templow': 16.8,
        'uv_index': 7,
        'wind_bearing': 198,
        'wind_gust_speed': 24.1,
        'wind_speed': 16.7,
      }),
      dict({
        'apparent_temperature': 26.5,
        'cloud_coverage': 45,
        'condition': 'partlycloudy',
        'datetime': '2020-07-29T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 9,
        'temperature': 24.0,
        'templow': 11.7,
        'uv_index': 6,
        'wind_bearing': 293,
        'wind_gust_speed': 24.1,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 22.2,
        'cloud_coverage': 50,
        'condition': 'partlycloudy',
        'datetime': '2020-07-30T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 1,
        'temperature': 21.4,
        'templow': 12.2,
        'uv_index': 7,
        'wind_bearing': 280,
        'wind_gust_speed': 27.8,
        'wind_speed': 18.5,
      }),
    ]),
  })
# ---
# name: test_forecast_service[forecast]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 29.8,
          'cloud_coverage': 58,
          'condition': 'lightning-rainy',
          'datetime': '2020-07-26T05:00:00+00:00',
          'precipitation': 2.5,
          'precipitation_probability': 60,
          'temperature': 29.5,
          'templow': 15.4,
          'uv_index': 5,
          'wind_bearing': 166,
          'wind_gust_speed': 29.6,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 28.9,
          'cloud_coverage': 52,
          'condition': 'partlycloudy',
          'datetime': '2020-07-27T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'temperature': 26.2,
          'templow': 15.9,
          'uv_index': 7,
          'wind_bearing': 297,
          'wind_gust_speed': 14.8,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 31.6,
          'cloud_coverage': 65,
          'condition': 'partlycloudy',
          'datetime': '2020-07-28T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 31.7,
          'templow': 16.8,
          'uv_index': 7,
          'wind_bearing': 198,
          'wind_gust_speed': 24.1,
          'wind_speed': 16.7,
        }),
        dict({
          'apparent_temperature': 26.5,
          'cloud_coverage': 45,
          'condition': 'partlycloudy',
          'datetime': '2020-07-29T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 9,
          'temperature': 24.0,
          'templow': 11.7,
          'uv_index': 6,
          'wind_bearing': 293,
          'wind_gust_speed': 24.1,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 22.2,
          'cloud_coverage': 50,
          'condition': 'partlycloudy',
          'datetime': '2020-07-30T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 21.4,
          'templow': 12.2,
          'uv_index': 7,
          'wind_bearing': 280,
          'wind_gust_speed': 27.8,
          'wind_speed': 18.5,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecast]
  dict({
    'forecast': list([
      dict({
        'apparent_temperature': 29.8,
        'cloud_coverage': 58,
        'condition': 'lightning-rainy',
        'datetime': '2020-07-26T05:00:00+00:00',
        'precipitation': 2.5,
        'precipitation_probability': 60,
        'temperature': 29.5,
        'templow': 15.4,
        'uv_index': 5,
        'wind_bearing': 166,
        'wind_gust_speed': 29.6,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 28.9,
        'cloud_coverage': 52,
        'condition': 'partlycloudy',
        'datetime': '2020-07-27T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 25,
        'temperature': 26.2,
        'templow': 15.9,
        'uv_index': 7,
        'wind_bearing': 297,
        'wind_gust_speed': 14.8,
        'wind_speed': 9.3,
      }),
      dict({
        'apparent_temperature': 31.6,
        'cloud_coverage': 65,
        'condition': 'partlycloudy',
        'datetime': '2020-07-28T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 10,
        'temperature': 31.7,
        'templow': 16.8,
        'uv_index': 7,
        'wind_bearing': 198,
        'wind_gust_speed': 24.1,
        'wind_speed': 16.7,
      }),
      dict({
        'apparent_temperature': 26.5,
        'cloud_coverage': 45,
        'condition': 'partlycloudy',
        'datetime': '2020-07-29T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 9,
        'temperature': 24.0,
        'templow': 11.7,
        'uv_index': 6,
        'wind_bearing': 293,
        'wind_gust_speed': 24.1,
        'wind_speed': 13.0,
      }),
      dict({
        'apparent_temperature': 22.2,
        'cloud_coverage': 50,
        'condition': 'partlycloudy',
        'datetime': '2020-07-30T05:00:00+00:00',
        'precipitation': 0.0,
        'precipitation_probability': 1,
        'temperature': 21.4,
        'templow': 12.2,
        'uv_index': 7,
        'wind_bearing': 280,
        'wind_gust_speed': 27.8,
        'wind_speed': 18.5,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.home': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 29.8,
          'cloud_coverage': 58,
          'condition': 'lightning-rainy',
          'datetime': '2020-07-26T05:00:00+00:00',
          'precipitation': 2.5,
          'precipitation_probability': 60,
          'temperature': 29.5,
          'templow': 15.4,
          'uv_index': 5,
          'wind_bearing': 166,
          'wind_gust_speed': 29.6,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 28.9,
          'cloud_coverage': 52,
          'condition': 'partlycloudy',
          'datetime': '2020-07-27T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 25,
          'temperature': 26.2,
          'templow': 15.9,
          'uv_index': 7,
          'wind_bearing': 297,
          'wind_gust_speed': 14.8,
          'wind_speed': 9.3,
        }),
        dict({
          'apparent_temperature': 31.6,
          'cloud_coverage': 65,
          'condition': 'partlycloudy',
          'datetime': '2020-07-28T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 10,
          'temperature': 31.7,
          'templow': 16.8,
          'uv_index': 7,
          'wind_bearing': 198,
          'wind_gust_speed': 24.1,
          'wind_speed': 16.7,
        }),
        dict({
          'apparent_temperature': 26.5,
          'cloud_coverage': 45,
          'condition': 'partlycloudy',
          'datetime': '2020-07-29T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 9,
          'temperature': 24.0,
          'templow': 11.7,
          'uv_index': 6,
          'wind_bearing': 293,
          'wind_gust_speed': 24.1,
          'wind_speed': 13.0,
        }),
        dict({
          'apparent_temperature': 22.2,
          'cloud_coverage': 50,
          'condition': 'partlycloudy',
          'datetime': '2020-07-30T05:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': 1,
          'temperature': 21.4,
          'templow': 12.2,
          'uv_index': 7,
          'wind_bearing': 280,
          'wind_gust_speed': 27.8,
          'wind_speed': 18.5,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_subscription
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
# name: test_forecast_subscription.1
  list([
    dict({
      'apparent_temperature': 29.8,
      'cloud_coverage': 58,
      'condition': 'lightning-rainy',
      'datetime': '2020-07-26T05:00:00+00:00',
      'precipitation': 2.5,
      'precipitation_probability': 60,
      'temperature': 29.5,
      'templow': 15.4,
      'uv_index': 5,
      'wind_bearing': 166,
      'wind_gust_speed': 29.6,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 28.9,
      'cloud_coverage': 52,
      'condition': 'partlycloudy',
      'datetime': '2020-07-27T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 25,
      'temperature': 26.2,
      'templow': 15.9,
      'uv_index': 7,
      'wind_bearing': 297,
      'wind_gust_speed': 14.8,
      'wind_speed': 9.3,
    }),
    dict({
      'apparent_temperature': 31.6,
      'cloud_coverage': 65,
      'condition': 'partlycloudy',
      'datetime': '2020-07-28T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 10,
      'temperature': 31.7,
      'templow': 16.8,
      'uv_index': 7,
      'wind_bearing': 198,
      'wind_gust_speed': 24.1,
      'wind_speed': 16.7,
    }),
    dict({
      'apparent_temperature': 26.5,
      'cloud_coverage': 45,
      'condition': 'partlycloudy',
      'datetime': '2020-07-29T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 9,
      'temperature': 24.0,
      'templow': 11.7,
      'uv_index': 6,
      'wind_bearing': 293,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.0,
    }),
    dict({
      'apparent_temperature': 22.2,
      'cloud_coverage': 50,
      'condition': 'partlycloudy',
      'datetime': '2020-07-30T05:00:00+00:00',
      'precipitation': 0.0,
      'precipitation_probability': 1,
      'temperature': 21.4,
      'templow': 12.2,
      'uv_index': 7,
      'wind_bearing': 280,
      'wind_gust_speed': 27.8,
      'wind_speed': 18.5,
    }),
  ])
# ---
